// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleClientCmd concat definition file 1`] = `
"
/* eslint-disable */
// 不会被删除的 meta
export const Test0Meta = [{
  \\"name\\": \\"S0\\",
  \\"path\\": \\"server/user-controller.ts\\",
  \\"methods\\": [{
    \\"name\\": \\"m0\\",
    \\"decorators\\": [],
    \\"retSchema\\": [{
      \\"type\\": \\"string\\"
    }]
  }]
}]

namespace Test1NS {
  export interface App {
    S1: S1
  }
  interface S1 {}
}
export type Test1 = Test1NS.App;


namespace Test2NS {
  export interface App {
    S2: S2
  }
  interface S2 {}
}
export type Test2 = Test2NS.App;

export const Test0Meta = [
  {
    \\"name\\": \\"S0\\",
    \\"path\\": \\"server/user-controller.ts\\",
    \\"methods\\": [
      {
        \\"name\\": \\"m0\\",
        \\"decorators\\": [],
        \\"retSchema\\": [
          {
            \\"type\\": \\"string\\"
          }
        ]
      }
    ]
  }
];
export const Test1Meta = [];
export const Test2Meta = [];"
`;

exports[`handleClientCmd concat definition file 2`] = `
"{
  \\"Test0\\": [
    {
      \\"name\\": \\"S0\\",
      \\"path\\": \\"server/user-controller.ts\\",
      \\"methods\\": [
        {
          \\"name\\": \\"m0\\",
          \\"decorators\\": [],
          \\"retSchema\\": [
            {
              \\"type\\": \\"string\\"
            }
          ]
        }
      ]
    }
  ],
  \\"Test1\\": [],
  \\"Test2\\": []
}"
`;

exports[`handleClientCmd new definition file 1`] = `
"/* eslint-disable */


namespace Test1NS {
  export interface App {
    S1: S1
  }
  interface S1 {}
}
export type Test1 = Test1NS.App;


namespace Test2NS {
  export interface App {
    S2: S2
  }
  interface S2 {}
}
export type Test2 = Test2NS.App;

export const Test1Meta = [];
export const Test2Meta = [];"
`;
